# can-inspection-simulation

./: .gitignore  CAN-INSPECTION-SIMULATION.md  CLOUD-DEPLOYMENT.md  CREDENTIALS-UPDATE.md  Dockerfile  LOCAL-VS-CLOUD.md  Makefile  README.md  SUPERVISORD-MIGRATION.md  TASK13-SUMMARY.md  TASK15-STREAMING-IMPROVEMENTS.md  can_spawner.py  capture_config.json  capture_config.template.json  capture_training_data.py  configure_worlds.sh  entrypoint.sh  entrypoint_station2.sh  generate_dent_mesh.py  pyproject.toml  stream_test.py  streaming.py  supervisord.conf  test_camera.py  testing.md  web_viewer.py
.github/workflows/: docker-build.yml
models/can_dented/: model.config  model.sdf
models/can_good/: model.config  model.sdf
s6-rc.d/: README.md
s6-rc.d/can-spawner/: run
s6-rc.d/gazebo/: run
s6-rc.d/unpause-sim/: up
s6-rc.d/viam-server/: run
s6-rc.d/web-viewer/: run
s6-rc.d/xvfb/: run
static/css/: config.css  main.css
templates/: config.html  index.html
worlds/: cylinder_inspection.sdf  cylinder_inspection_2.sdf
